--- a/Puntajes/Puntajes/Puntajes.vcxproj.filters
+++ b/Puntajes/Puntajes/Puntajes.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="Nodo.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Main.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
